fix(system): fix search overflow firefox
Add width to the input to fix overflow after text is entered in Firefox.

Closes DCOS-21235

--- a/src/styles/components/form-elements/form-group/styles.less
+++ b/src/styles/components/form-elements/form-group/styles.less
@@ -36,6 +36,10 @@
       }
     }
   }
+
+  .health-tab input {
+    min-width: 0;
+  }
 }
 
 & when (@form-group-enabled) and (@layout-screen-small-enabled) {
